<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sébastien Chavagnas</string>
    <string name="nav_header_subtitle">chavagnas.sebastien@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">My Map</string>
    <string name="menu_list">List of Goods</string>
    <string name="menu_add_property">New property</string>

    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_search">Search</string>

    <string name="title_edit">Edit your property</string>
    <string name="title_list">List</string>
    <string name="title_good">Good</string>
    <string name="good_picture">Good picture</string>
    <string name="currencyDollars">$</string>
    <string name="loan_simulator">Loan simulator</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_add">Add new real estate</string>
    <string name="title_activity_calculator">Loan calculator</string>
    <string name="title_activity_edit">Edit current real estate</string>
    <string name="title_activity_search">Search…</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="validate">Validate</string>
    <string name="emailAddress">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>

    <!-- Type of Property -->
    <string name="house">House</string>
    <string name="apartment">Apartment</string>
    <string name="penthouse">Penthouse</string>
    <string name="loft">Loft</string>
    <string name="cottage">Cottage</string>
</resources>
