<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_add_property"
            android:icon="@drawable/ic_add_black"
            android:title="@string/menu_add_property" />
        <item
            android:id="@+id/nav_simulator"
            android:icon="@drawable/ic_price"
            android:title="@string/loan_simulator" />
    </group>

</menu>
