<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_more_vert_white"
        android:title="">
        <menu>
            <item
                android:id="@+id/action_add"
                android:orderInCategory="100"
                android:title="@string/action_add"
                android:icon="@drawable/ic_add_black"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_edit"
                android:orderInCategory="100"
                android:title="@string/action_edit"
                android:icon="@drawable/ic_edit_black"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_search"
                android:orderInCategory="100"
                android:title="@string/action_search"
                android:icon="@drawable/ic_search_black"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>
