<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/background_imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_centerInParent="true">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#0DFFFFFF"
            app:cardCornerRadius="10dp"
            app:cardElevation="1dp">


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="40dp"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutDark"
                android:textColorHint="@color/colorAccent"
                app:hintTextColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailAddress"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                style="@style/TextInputLayoutDark"
                android:textColorHint="@color/colorAccent"
                app:passwordToggleTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"/>
            </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    style="@style/ButtonDark"
                    android:text="@string/sign_in"
                    android:textSize="18sp"
                     />
        </LinearLayout>
        </androidx.cardview.widget.CardView>

    </ScrollView>
</RelativeLayout>

