<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.MainActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="25dp"
            app:layout_constraintTop_toTopOf="@id/container">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/nav_header_desc"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <!-- Names -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/form_imageView_user"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_user"
                    android:tint="@color/colorAccent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/register_form_first_name_wrapper"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_form_first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text="Sébastien"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/register_form_last_name_wrapper"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_form_last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:hint="@string/last_name"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text="Chavagnas"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorSurface"
                android:visibility="visible" />


            <!--Currency Preferences-->
            <TextView
                android:id="@+id/currency_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="Choose your currency :" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/currency_toggle_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:checkedButton="@+id/button_currency_1"
                app:layout_constraintTop_toBottomOf="@id/tv_media"
                app:singleSelection="true"
                app:selectionRequired="true"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_currency_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Euros"
                    app:icon="@drawable/ic_euro_symbol_black_24dp"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_currency_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Dollars"
                    app:icon="@drawable/ic_price"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <!--            <RadioGroup-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginStart="20dp"-->
            <!--                android:layout_marginEnd="20dp"-->
            <!--                android:checkedButton="@+id/euros"-->
            <!--                android:layout_gravity="center_horizontal"-->
            <!--                android:orientation="horizontal">-->

            <!--                <RadioButton-->
            <!--                    android:id="@+id/euros"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:drawableEnd="@drawable/ic_euro_symbol_black_24dp"-->
            <!--                    android:text=""/>-->

            <!--                <RadioButton-->
            <!--                    android:id="@+id/dollars"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:drawableEnd="@drawable/ic_price"-->
            <!--                    android:text=""/>-->
            <!--            </RadioGroup>-->

            <!--Currency Preferences-->

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorSurface"
                android:visibility="visible" />


            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="Choose your metric system :" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/metric_toggle_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:checkedButton="@+id/button_currency_1"
                app:layout_constraintTop_toBottomOf="@id/tv_media"
                app:singleSelection="true"
                app:selectionRequired="true"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_metric_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="mètre carré"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_metric_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="square feet"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
            </com.google.android.material.button.MaterialButtonToggleGroup>
        </LinearLayout>

<!--        <Button-->
<!--            android:id="@+id/validate_button"-->
<!--            style="@style/ButtonLight"-->
<!--            android:layout_margin="20dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="sans-serif-medium"-->
<!--            android:text="@string/validate"-->
<!--            android:textSize="18sp"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>